# TAMILARASU-ENTERPRISES

./: .env.local  .gitattributes  .gitignore  Dockerfile  Procfile  README.md  app.py  check_template.py  db.py  netlify.toml  pom.xml  pyproject.toml  render.yaml  requirements.txt  server.py  start.sh  wsgi.py
.kiro/specs/ecommerce-ui-admin-enhancement/: .config.kiro  design.md  requirements.md
.kiro/specs/tamilarasu-enterprises-ecommerce/: .config.kiro  design.md  requirements.md  (+1 more)
admin/: products_store.py  services_store.py
auth/: users.py
catalog/: __init__.py  filter.py  loader.py
data/: about.json  products.json  services.json  site_config.json
inquiry/: __init__.py  email_builder.py  email_service.py  submission.py  validator.py
models/: inquiry.py  product.py  site.py
scripts/: .gitkeep  change_admin_password.py  csv_export.py  csv_import.py  daily_report.py  email_notifier.py  migrate_to_mongo.py  sync_products_to_mongo.py
static/css/: main.css  no-js.css
static/js/: nav.js
templates/: about.html  base.html  catalog.html  contact.html  forgot_password.html  home.html  login.html  register.html  reset_password.html  services.html
templates/admin/: base_admin.html  dashboard.html  product_form.html  products.html  service_form.html  services.html  users.html
templates/components/: product_card.html  service_card.html
tests/: test_catalog_loader.py  test_email_builder.py  test_filter_products.py  test_product_model.py  test_routes.py  test_submit_inquiry.py  test_validate_inquiry_form.py
utils/: recaptcha.py  sanitize.py  validation.py
(+100 files in other folders)
