[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tamilarasu-enterprises"
version = "0.1.0"
description = "TAMILARASU ENTERPRISES – Fresh Products Import/Export Website"
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.1",
    "frozen-flask==1.0.2",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "hypothesis==6.131.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "catalog*", "components*", "inquiry*", "utils*"]
